# aws-infra-graph

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  LICENSE  ORG_KNOWLEDGE.md  PLANNING.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml
diagrams/: architecture.excalidraw  aws-deployment-architecture.excalidraw  graph-schema.excalidraw
docs/: article-medium.md  ops-runbook.md
examples/: sample_queries.md
infra/: app.py  cdk.json
infra-agent/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  system_prompt.md
infra-agent/.chainlit/: config.toml
infra-agent/infra_agent/: __init__.py  __main__.py  agent.py  app.py  config.py  logging_config.py  models.py  prompt.py
infra-agent/infra_agent/api/: __init__.py  auth.py  events.py  router.py  schemas.py  streaming.py
infra-agent/infra_agent/sessions/: __init__.py  manager.py  store.py
infra-agent/tests/: __init__.py  conftest.py  test_agent.py  test_api_events.py  test_api_schemas.py  test_auth.py  test_config.py  test_logging_config.py  test_models.py  test_prompt.py  test_router.py  test_session_manager.py  test_session_store.py  test_streaming.py
infra-agent/ui/: app.py  chainlit_app.py
scripts/: dedup_accounts.cypher
src/: auth.py  cli.py  config.py  logging_config.py  main.py  neo4j_startup.py  notifications.py
tests/: conftest.py  test_apigateway_collector.py  test_auth.py  test_cloudformation_arn.py  test_cloudformation_collector.py  test_cloudfront_collector.py  test_cloudwan_collector.py  test_cloudwan_policy.py  test_cloudwan_routes.py  test_cloudwan_tools.py  test_code_collectors.py  test_connectivity_analyzer.py  test_dns_trace.py  test_dynamodb_collector.py  test_ec2_collector.py  test_ecs_collector.py  test_eks_collector.py  test_eks_pod_cidr.py  test_elasticache_collector.py  test_elb_collector.py  test_feedback.py  test_graph_builder.py  test_guided_connectivity.py  test_iam_collector.py  test_issue_report.py  test_k8s_auth.py  test_k8s_collector.py  test_k8s_resources.py  test_lambda_collector.py  (+28 more)
(+83 files in other folders)
